--- a/pseudo.scss
+++ b/pseudo.scss
@@ -1,4 +1,4 @@
-@mixin before {
+@mixin fz-before {
   &:before {
     display: block;
     content: '';
@@ -6,7 +6,7 @@
   }
 }
 
-@mixin after {
+@mixin fz-after {
   &:after {
     display: block;
     content: '';
@@ -14,7 +14,7 @@
   }
 }
 
-@mixin before-and-after {
+@mixin fz-beforeAndAfter {
   &:after,
   &:before {
     display: block;
